--- a/sub-modules/raylib-with-extras/raylib.vcxproj
+++ b/sub-modules/raylib-with-extras/raylib.vcxproj
@@ -96,7 +96,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;..\rres\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -114,7 +114,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;BUILD_LIBTYPE_SHARED;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;..\rres\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -131,7 +131,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;..\rres\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -153,7 +153,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;BUILD_LIBTYPE_SHARED;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;..\rres\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -179,10 +179,17 @@
     <ClInclude Include="..\raylib\src\rgestures.h" />
     <ClInclude Include="..\raylib\src\rlgl.h" />
     <ClInclude Include="..\raylib\src\utils.h" />
+    <ClInclude Include="..\rres\src\external\aes.h" />
+    <ClInclude Include="..\rres\src\external\lz4.h" />
+    <ClInclude Include="..\rres\src\external\monocypher.h" />
+    <ClInclude Include="..\rres\src\external\qoi.h" />
+    <ClInclude Include="..\rres\src\rres-raylib.h" />
+    <ClInclude Include="..\rres\src\rres.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\raylib-extra-shims\src\physac.c" />
     <ClCompile Include="..\raylib-extra-shims\src\raygui.c" />
+    <ClCompile Include="..\raylib-extra-shims\src\rres.c" />
     <ClCompile Include="..\raylib\src\raudio.c" />
     <ClCompile Include="..\raylib\src\rcore.c" />
     <ClCompile Include="..\raylib\src\rglfw.c" />
