--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -20,8 +20,8 @@
         <RepositoryUrl>https://github.com/NotNotTech/Raylib-CsLo</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>raylib-cslo_128x128.png</PackageIcon>
-        <Version>4.2.0.3</Version>
-        <PackageReleaseNotes>Release Notes: raylib 4.2 release. win-x64 and linux-x64 support</PackageReleaseNotes>
+        <Version>4.2.0.4</Version>
+        <PackageReleaseNotes>Release Notes: add mac-arm64 (M1) support</PackageReleaseNotes>
         <Authors>Novaleaf</Authors>
         <Company>NotNotTech</Company>
         <Description>
