--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -20,8 +20,8 @@
         <RepositoryUrl>https://github.com/NotNotTech/Raylib-CsLo</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>raylib-cslo_128x128.png</PackageIcon>
-        <Version>4.2.0.6</Version>
-        <PackageReleaseNotes>Release Notes: fix mac-arm64 (M1) support</PackageReleaseNotes>
+        <Version>4.2.0.7</Version>
+        <PackageReleaseNotes>Release Notes: fix mac-arm64 (M1) support by mac specific checkin of binaries</PackageReleaseNotes>
         <Authors>Novaleaf</Authors>
         <Company>NotNotTech</Company>
         <Description>
